fix: splider cards gap

--- a/challenge2group1/src/css/splide.css
+++ b/challenge2group1/src/css/splide.css
@@ -1,3 +1,8 @@
 .splide__pagination {
   display: none;
+  
+}
+.splide__list {
+  display: flex;
+  gap: 40px;
 }
